update second database
